# SANAD

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/migrations/: env.py
apps/api/scripts/: create_demo_fixtures.py  smoke_tmt_direction_matrix.py  smoke_tmt_provider.py  validate_demo_flow.py  validate_language_coverage.py  validate_tamang_proof_flow.py  verify_real_api.py
apps/api/src/sanad_api/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
apps/api/src/sanad_api/routers/: documents.py  health.py  platform.py
apps/api/src/sanad_api/services/: demo_content.py  demo_reset.py  docx_io.py  export.py  feedback_pack.py  glossary.py  language_detection.py  memory.py  normalization.py  pdf_document_io.py  processing.py  protection.py  providers.py  review.py  risk.py  scope.py  storage.py  tabular_document_io.py  text_document_io.py
apps/api/tests/: test_api_reliability.py  test_audit_edge_cases.py  test_docx_io.py  test_glossary_protection.py  test_integrity_auditor.py  test_language_detection.py  test_memory.py  test_pdf_document_io.py  test_processing.py  test_provider_adapter_harness.py  test_provider_contract.py  test_repair_engine.py  test_risk.py  test_text_document_io.py
apps/api/tests/fixtures/: tmt_recorded_response.example.json
apps/api/tests/helpers/: provider_adapter_harness.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  (+3 more)
docs/: ARCHITECTURE.md  EVALUATION_MAP.md
scripts/: reset_demo_state.sh
(+8 files in other folders)
